Added: - ColumnList macro expansion now add columns for relation metadata where appropriate. - Support for lateral joins (using outer apply in SQL Server). Fixed: - Metadata expansion into columns in ColumnList macro expansion considers whether   query is grouped and is a modifying query. - `range` function (for building histogram of values similar to the `bin` macro)   has been renamed to `binf` to not clash with the `range` keyword used in specifying   the window frame of window functions. Improved: - Attributes which are literal are normally optimised away (removed from the column-list   of the query and calculated statically). The optimisation was not carried out   in subqueries as the attributes could be referenced in an outer query. An   exception to the subqueries rule has been added which is when the query is the   last query in a `With` query; in that case, attributes loading can be optimised   as the columns will not be referred to outside the `With` query. - Simplified the `Result` classes by removing redundant fields, replacing generic   pairs and triples with new record types and removing unused methods. - Document `Result` classes. - Optimize loading of literal attribute values set as columns (as columns named   as '<col>/<attribute>').